--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,12 @@
         }
     ],
     "require": {
-        "oodle/krumo": "dev-master",
-        "leafo/scssphp": "dev-master",
-        "chh/shellwords": "dev-master"
+        "leafo/scssphp": "0.0.7",
+        "chh/shellwords": "0.1.0"
     },
-
+    "require-dev": {
+        "oodle/krumo": "0.2.3"
+    },
     "autoload": {
         "psr-0": {
             "Sprockets": "src/"
