--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         }
     ],
     "require": {
-        "leafo/scssphp": "0.0.7",
+        "leafo/scssphp": "dev-master",
+        "leafo/scssphp-compass": "dev-master",
         "chh/shellwords": "0.1.0"
     },
     "require-dev": {
