Aww man, changed too much stuff. CoffeeScript now works!

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "leafo/scssphp": "dev-master",
         "leafo/scssphp-compass": "dev-master",
+        "coffeescript/coffeescript": "dev-master",
         "chh/shellwords": "0.1.0"
     },
     "require-dev": {
