--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "require": {
         "leafo/scssphp": "dev-master",
         "leafo/scssphp-compass": "dev-master",
+        "leafo/lessphp": "dev-master",
         "coffeescript/coffeescript": "dev-master",
         "chh/shellwords": "0.1.0"
     },
