Add extensions to support asset precompilation is laravel-asset-pipeline

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "leafo/scssphp-compass": "dev-master",
         "leafo/lessphp": "dev-master",
         "coffeescript/coffeescript": "dev-master",
-        "chh/shellwords": "0.1.0"
+        "chh/shellwords": "0.1.0",
+        "symfony/finder": "2.3.*"
     },
     "require-dev": {
         "oodle/krumo": "0.2.3"
