--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "coffeescript/coffeescript": "dev-master",
         "chh/shellwords": "0.1.0",
         "symfony/finder": "2.3.*",
+        "symfony/filesystem": "2.3.*",
         "symfony/http-foundation": "2.3.*"
     },
     "require-dev": {
