--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "symfony/http-foundation": "2.3.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "3.7.*",
+        "mockery/mockery": "0.8.*",
         "oodle/krumo": "0.2.3",
         "symfony/debug": "2.3.*"
     },
