--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,11 @@
         }
     ],
     "require": {
-        "leafo/scssphp": "dev-master",
-        "leafo/scssphp-compass": "dev-master",
-        "leafo/lessphp": "0.4.0",
-        "coffeescript/coffeescript": "dev-master",
         "chh/shellwords": "0.1.0",
         "symfony/finder": "2.3.*",
         "symfony/filesystem": "2.3.*",
-        "symfony/http-foundation": "2.3.*"
+        "symfony/http-foundation": "2.3.*",
+        "symfony/process": "2.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
